force-app/main/default/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Enrolled_Sibling_Diff_Acc_Diff_House__c</fullName>
        <description>Used in a report on the &apos;Houses Summary&apos; dashboard</description>
        <formula>AND(
    OR(
       TEXT(StageName) = &quot;Enrolled&quot;,
       AND(
           TEXT(StageName) = &quot;A/ Deposit&quot;,
           TEXT(Add_to_Register__c) = &quot;Yes&quot;
           )
       ),
    OR(
       AND(
           NOT(ISBLANK(Sibling_1__c)),
           Sibling_1__r.House_Copy__c != &quot;**Pending**&quot;,
           House_Copy__c != &quot;**Pending**&quot;,
           Sibling_1__r.House_Copy__c != House_Copy__c,
           OR(
              TEXT(Sibling_1__r.StageName) = &quot;Enrolled&quot;,
              AND(
                  TEXT(Sibling_1__r.StageName) = &quot;A/ Deposit&quot;,
                  TEXT(Sibling_1__r.Add_to_Register__c) = &quot;Yes&quot;
                  )
              )
           ),
       AND(
           NOT(ISBLANK(Sibling_2__c)),
           Sibling_2__r.House_Copy__c != &quot;**Pending**&quot;,
           House_Copy__c != &quot;**Pending**&quot;,
           Sibling_2__r.House_Copy__c != House_Copy__c,
           OR(
              TEXT(Sibling_2__r.StageName) = &quot;Enrolled&quot;,
              AND(
                  TEXT(Sibling_2__r.StageName) = &quot;A/ Deposit&quot;,
                  TEXT(Sibling_2__r.Add_to_Register__c) = &quot;Yes&quot;
                  )
              )
           ),
       AND(
           NOT(ISBLANK(Sibling_3__c)),
           Sibling_3__r.House_Copy__c != &quot;**Pending**&quot;,
           House_Copy__c != &quot;**Pending**&quot;,
           Sibling_3__r.House_Copy__c != House_Copy__c,
           OR(
              TEXT(Sibling_3__r.StageName) = &quot;Enrolled&quot;,
              AND(
                  TEXT(Sibling_3__r.StageName) = &quot;A/ Deposit&quot;,
                  TEXT(Sibling_3__r.Add_to_Register__c) = &quot;Yes&quot;
                  )
              )
           ),
       AND(
           NOT(ISBLANK(Sibling_4__c)),
           Sibling_4__r.House_Copy__c != &quot;**Pending**&quot;,
           House_Copy__c != &quot;**Pending**&quot;,
           Sibling_4__r.House_Copy__c != House_Copy__c,
           OR(
              TEXT(Sibling_4__r.StageName) = &quot;Enrolled&quot;,
              AND(
                  TEXT(Sibling_4__r.StageName) = &quot;A/ Deposit&quot;,
                  TEXT(Sibling_4__r.Add_to_Register__c) = &quot;Yes&quot;
                  )
              )
           )
       )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled Sibling - Diff Acc - Diff House</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_Stage__c</fullName>
        <formula>IF(
   OR(
      TEXT(StageName) = &quot;Enrolled&quot;,
      AND(
          TEXT(StageName) = &quot;A/ Deposit&quot;,
          TEXT(Add_to_Register__c) = &quot;Yes&quot;
          )
      ),
   &quot;Enrolled + Attending School&quot;,
   TEXT(StageName)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_v_Not_Enrolled__c</fullName>
        <formula>IF(ISPICKVAL(StageName,&quot;Enrolled&quot;),&quot;Enrolled&quot;,&quot;Not-Enrolled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled v Not Enrolled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equiv_Termly_Invoice_Lines_Lunch__c</fullName>
        <label>Equiv. Termly Invoice Lines (Lunch)</label>
        <summarizedField>Line_Item__c.Audit_Value_Text_Terms__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fee_Type__c</field>
            <operation>equals</operation>
            <value>Lunch</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Equiv_Termly_Invoice_Lines_Tuition__c</fullName>
        <label>Equiv. Termly Invoice Lines (Tuition)</label>
        <summarizedField>Line_Item__c.Audit_Value_Text_Terms__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fee_Type__c</field>
            <operation>equals</operation>
            <value>Tuition</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Existing_Future_Student__c</fullName>
        <formula>IF(
   CloseDate &gt; TODAY(),
   &quot;Future&quot;,
   &quot;Existing&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing/Future Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTE_Leavers__c</fullName>
        <formula>IF(
   FTE_Value_Adjustment__c &lt; 0,
   FTE_Value_Adjustment__c,
   IF(
      NOT(ISBLANK(Custom_FTE_Value__c)),
      0-Custom_FTE_Value__c,
      IF(
         Half_Day_PN_N_Checkbox__c = TRUE,
         -0.5,
         -1
         )
      )
   )</formula>
        <label>FTE Leavers</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_Starters__c</fullName>
        <formula>IF(
   FTE_Value_Adjustment__c &gt; 0,
   FTE_Value_Adjustment__c,
   IF(
      NOT(ISBLANK(Custom_FTE_Value__c)),
      Custom_FTE_Value__c,
      IF(
         Half_Day_PN_N_Checkbox__c = TRUE,
         0.5,
         1
         )
      )
   )</formula>
        <label>FTE Starters</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_Value_Adjustment_Date__c</fullName>
        <description>The date on which the current/latest FTE value adjustment is recorded</description>
        <label>FTE Value Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FTE_Value_Adjustment__c</fullName>
        <description>Capture any FTE value adjustment to be included in joiners/leavers KPIs, such as:
1) A change in the custom FTE value of a student
2) A change in the half day value of a student from half day to full day or vice versa</description>
        <label>FTE Value Adjustment</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_Value_Last_Week__c</fullName>
        <description>Calculates last week&apos;s FTE value for a student, taking into account any adjustments and the fact that joiners, even adjustment joiners, can&apos;t be added over the summer</description>
        <formula>IF(
   AND(
       NOT(ISBLANK(FTE_Value_Adjustment__c)),
       FTE_Value_Adjustment_Date__c &gt;= TODAY() - CASE(WEEKDAY(TODAY()), 2,0, 3,1, 4,2, 5,3, 6,4, 7,5, 6)
       ),
   IF(
      NOT(ISBLANK(Custom_FTE_Value__c)),
      Custom_FTE_Value__c,
      IF(
         Half_Day_PN_N_Checkbox__c = TRUE,
         0.5,
         1
         )
      ) - FTE_Value_Adjustment__c,
   IF(
      NOT(ISBLANK(Custom_FTE_Value__c)),
      Custom_FTE_Value__c,
      IF(
         Half_Day_PN_N_Checkbox__c = TRUE,
         0.5,
         1
         )
      )
   )</formula>
        <label>FTE Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_Value_This_Week__c</fullName>
        <description>Calculates this week&apos;s FTE value for a student, taking into account any adjustments and the fact that joiners, even adjustment joiners, can&apos;t be added over the summer</description>
        <formula>IF(
   AND(
       NOT(ISBLANK(FTE_Value_Adjustment__c)),
       FTE_Value_Adjustment_Date__c &gt; TODAY() - CASE(WEEKDAY(TODAY()), 2,0, 3,1, 4,2, 5,3, 6,4, 7,5, 6)
       ),
   IF(
      NOT(ISBLANK(Custom_FTE_Value__c)),
      Custom_FTE_Value__c,
      IF(
         Half_Day_PN_N_Checkbox__c = TRUE,
         0.5,
         1
         )
      ) - FTE_Value_Adjustment__c,
   IF(
      NOT(ISBLANK(Custom_FTE_Value__c)),
      Custom_FTE_Value__c,
      IF(
         Half_Day_PN_N_Checkbox__c = TRUE,
         0.5,
         1
         )
      )
   )</formula>
        <label>FTE Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_Info_Response_Status_from_account__c</fullName>
        <formula>TEXT(Account.F_Info_Response_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F/Info Response Status (from account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name__c</fullName>
        <description>The field that defines the name of the family in School Kompanion, relevant to the family UID</description>
        <formula>Account.LastName</formula>
        <label>Family Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_UID__c</fullName>
        <description>The UID that links students and contacts in School Kompanion</description>
        <formula>IF(
   NOT(ISBLANK(AccountId)),
   Account.Family_UID__c,
   &quot;&quot;
   )</formula>
        <label>Family UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <formula>IF(
   TEXT(Account.PersonContact.Contact_Relationship__c) = &quot;Father&quot;,    
   Account.First_Parent_Full_Name__c, 
   IF( 
      Account.Account_Relationship_Formula__c = &quot;Father&quot;,  
      Account.Second_Parent_Full_Name__c, 
      &quot;Not Defined on Parent/Guardian 1 or 2&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Father&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fifth_Car_Plate_Number__c</fullName>
        <formula>Account.Fifth_Car_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fifth Car Plate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filipino__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filipino</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Count__c</fullName>
        <label>Financial Aid Count</label>
        <summaryForeignKey>Student_Grant__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Note__c</fullName>
        <formula>IF( Financial_Aid_Count__c &gt;0,

&quot;Review details in Financial Aid section below&quot;,&quot;None Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Aid__c</fullName>
        <label>Financial Aid ( % )</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>First_Car_Plate_Number__c</fullName>
        <formula>Account.First_Car_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Car Plate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Language_is_English__c</fullName>
        <label>First Language is English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name_Last_Name__c</fullName>
        <formula>Student_Name__c &amp;&quot; &quot;&amp;  Student_Surname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name + Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follet_Group_Name__c</fullName>
        <formula>Class_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follet Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Car_Plate_Number__c</fullName>
        <formula>Account.Fourth_Car_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fourth Car Plate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCSE_Option_Count__c</fullName>
        <formula>IF(NOT(ISBLANK(TEXT(SK_GCSE_Block_A_Option__c))), 1, 0) +
IF(NOT(ISBLANK(TEXT(SK_GCSE_Block_B_Option__c))), 1, 0) +
IF(NOT(ISBLANK(TEXT(SK_GCSE_Block_C_Option__c))), 1, 0) +
IF(NOT(ISBLANK(TEXT(SK_GCSE_Block_D_Option__c))), 1, 0) +
IF(NOT(ISBLANK(TEXT(SK_GCSE_Block_E_Option__c))), 1, 0) +
IF(NOT(ISBLANK(TEXT(SK_GCSE_Block_F_Option__c))), 1, 0) +
IF(NOT(ISBLANK(SK_Additional_Learning_1_Grouping_Period__c)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCSE Option Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender_M_F__c</fullName>
        <description>Used in some exam reports</description>
        <formula>IF(
   TEXT(Gender__c) = &quot;Male&quot;, 
   &quot;M&quot;,
   IF(
      TEXT(Gender__c) = &quot;Female&quot;, 
      &quot;F&quot;,
      &quot;&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender (M/F)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Girls__c</fullName>
        <description>Used in the class list dashboard reports for NYIS</description>
        <formula>TEXT(Gender__c) = &quot;Female&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Girls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <formula>TEXT(YEAR(Start_Next_Academic_Year__c)+17-Student_Age_at_Last_Cut_off_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Day_PN_N_Checkbox__c</fullName>
        <formula>TEXT(Half_Day_PN_N__c) != &quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Day? (PN/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Half_Day_PN_N_NY_Checkbox__c</fullName>
        <formula>IF(TEXT(Next_Year_Half_Day_PN_N__c) != &quot;&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Day? (PN/N) (NY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Half_Day_PN_N_NY__c</fullName>
        <description>Used on dashboard reports to identify a students half day status for next year</description>
        <formula>IF(
   OR(
      AND(
          CloseDate &gt;= Start_Date_Next_Fiscal_Year__c, 
          TEXT(Half_Day_PN_N__c) != &quot;&quot;
          ),
      AND(
          CloseDate &lt; Start_Date_Next_Fiscal_Year__c, 
          TEXT(Next_Year_Half_Day_PN_N__c) != &quot;&quot;
          )
      ),
   True,
   False
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Day? (PN/N) (NY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Half_Day_PN_N__c</fullName>
        <label>Half Day? (PN/N)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Year_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Half_Day_Prior_Value__c</fullName>
        <label>Half Day Prior Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Active_Enrolment_Fee_Line_Item__c</fullName>
        <label>Has Active Enrolment Fee Line Item</label>
        <summarizedField>Line_Item__c.Is_Active_Enrolment_Fee_Line_Item__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Attended_School_Date_Confirmed__c</fullName>
        <description>Populated by means of a workflow rule and field update, captures the date on which &apos;Has Attended School&apos; is set to TRUE</description>
        <label>Has Attended School (Date Confirmed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Attended_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in NAE KPIs as a student needs to have actually attended school to be considered a &apos;joiner&apos; regardless of if the starting date has passed, if they&apos;re paying fees etc.</description>
        <label>Has Attended School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Been_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control used in the admissions procedure to stop a &apos;starting date is changed&apos; email being sent on initial enrolment AND used in the School_Kompanion_On_Roll__c field to set the output to &apos;No&apos; if a student is enrolled or a/deposit + attending school and subsequently cancelled before they actually start school</description>
        <label>Has Been Enrolled or A/Dep Att. School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Bus_Inconsistency_Accounting__c</fullName>
        <formula>IF( 
   OR( 
      AND(
          OR (Bus_Service__c &gt;= 1, 
          Bus_Service_Required__c = TRUE
          ),
          Has_Current_Bus_Fee__c = 0 
      ),
      AND( 
          OR(Bus_Service__c = 0, 
             Bus_Service_Required__c = FALSE
             ), 
          Has_Current_Bus_Fee__c = 1 
          )
      ), 
   TRUE, FALSE
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Bus Inconsistency (Accounting)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Bus_Inconsistency_Bus_Coordinator__c</fullName>
        <formula>IF( 
   OR( 
      AND(
          Bus_Service__c &gt;= 1, 
          Bus_Service_Required__c = FALSE 
          ), 
      AND(
          Bus_Service__c = 0, 
          Bus_Service_Required__c = TRUE 
          )
      ), 
    TRUE, FALSE
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Bus Inconsistency (Bus Coordinator)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Current_Bus_Fee__c</fullName>
        <label>Has Current Bus Fee?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Copy_Fee_Type__c</field>
            <operation>equals</operation>
            <value>Bus</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Current_Discounted_Fee__c</fullName>
        <label>Has Current Discounted Fee?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Discount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Current_EAL_Fee__c</fullName>
        <label>Has Current EAL Fee?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Copy_Fee_Type__c</field>
            <operation>equals</operation>
            <value>EAL</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Current_Lunch_Fee__c</fullName>
        <label>Has Current Lunch Fee?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Copy_Fee_Type__c</field>
            <operation>equals</operation>
            <value>Lunch</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Current_Other_Fee__c</fullName>
        <label>Has Current Other Fee?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Copy_Fee_Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Current_Tuition_Fees__c</fullName>
        <label>Has Current Tuition Fee?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Copy_Fee_Type__c</field>
            <operation>equals</operation>
            <value>Tuition</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Discount_Inconsistency__c</fullName>
        <formula>IF(
   OR( 
      AND( 
          Financial_Aid_Note__c = &quot;Review details in Financial Aid section below&quot;, 
          Has_Current_Discounted_Fee__c = 0 
          ), 
      AND(
          Financial_Aid_Note__c = &quot;None Approved&quot;, 
          Has_Current_Discounted_Fee__c &gt;= 1 
          ) 
      ), 
   &quot;TRUE&quot;, 
   &quot;FALSE&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Discount Inconsistency?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_EAL_Inconsistency__c</fullName>
        <formula>OR( 
   AND(
       Has_Current_EAL_Fee__c &gt;= 1, 
       OR( 
          ISBLANK(EAL_Start_Date__c),  
          EAL_End_Date__c &lt; TODAY(),
          TEXT(SK_Additional_Learning_1__c)!=&quot;EAL&quot;,
          NOT(INCLUDES(Learning_Support_Provided__c, &quot;EAL - Gold&quot;))
          ) 
       ), 
   AND(
       Has_Current_EAL_Fee__c = 0, 
       OR(
          AND(
              NOT(ISBLANK(EAL_Start_Date__c)), 
              OR(
                 EAL_End_Date__c &gt; TODAY()+180, 
                 ISBLANK(EAL_End_Date__c)
                 )
              ),
          AND(
              NOT(ISBLANK(EAL_Start_Date__c)),
              NOT(ISBLANK(EAL_End_Date__c)),
              EAL_End_Date__c &lt; TODAY(),
              OR(
                 TEXT(SK_Additional_Learning_1__c)=&quot;EAL&quot;,
                 INCLUDES(Learning_Support_Provided__c, &quot;EAL - Gold&quot;)
                 )
              )
          ) 
       ),
   AND(
       TEXT(SK_Additional_Learning_1__c)=&quot;EAL&quot;,
       OR(
          NOT(INCLUDES(Learning_Support_Provided__c, &quot;EAL - Gold&quot;)),
          ISBLANK(EAL_Start_Date__c)
          )
       ),
   AND(
       INCLUDES(Learning_Support_Provided__c, &quot;EAL - Gold&quot;),
       OR(
          TEXT(SK_Additional_Learning_1__c)!=&quot;EAL&quot;,
          ISBLANK(EAL_Start_Date__c)
          )
       ),
   AND(
       NOT(ISBLANK(EAL_Start_Date__c)),
       EAL_Start_Date__c &lt;= TODAY(),
       EAL_End_Date__c &gt; TODAY(),
       OR(
          NOT(INCLUDES(Learning_Support_Provided__c, &quot;EAL - Gold&quot;)),
          TEXT(SK_Additional_Learning_1__c)!=&quot;EAL&quot;
          )
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has EAL Inconsistency?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Fees__c</fullName>
        <description>Shows whether or not a student has fees (opportunity products) assigned</description>
        <label>Has Fees?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Lunch_Inconsistency__c</fullName>
        <formula>IF ( OR ( 
AND ( Has_Current_Lunch_Fee__c  &gt;= 1, Lunches__c = FALSE ), 
AND ( Has_Current_Lunch_Fee__c  = 0, Lunches__c = TRUE, School__c &lt;&gt; &quot;The British School of Nanjing&quot; ) 
         ), &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Lunch Inconsistency?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Whole_School_Registration__c</fullName>
        <formula>Student_Academic_File__r.Has_Whole_School_Registration__c != 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Whole School Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_bus_service_assigned__c</fullName>
        <formula>if(Bus_Service__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Has bus service assigned?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hong_Kong__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hong Kong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Copy__c</fullName>
        <description>Copies the value from the house picklist field to a standard text field for use in formulas, where otherwise using the TEXT function within the formula would push the maximum compiled size above 5000 characters.</description>
        <label>House (T.Yr)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Next_Year_Copy__c</fullName>
        <description>Copies the value from the house next year picklist field to a standard text field for use in formulas, where otherwise using the TEXT function within the formula would push the maximum compiled size above 5000 characters.</description>
        <label>House Next Year Copy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Next_Year_Formula__c</fullName>
        <description>Required to define the house next year dependent on whether the student is an existing student or a student starting in the next academic year</description>
        <formula>IF(
   AND(
       CloseDate &lt; Start_Date_Next_Fiscal_Year__c, 
       NOT(ISBLANK(House_Next_Year_Copy__c))
       ),
   House_Next_Year_Copy__c,
   House_Copy__c
   )</formula>
        <label>House (N.Yr)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Next_Year__c</fullName>
        <description>Defaults: 
On lead convert: null
On student clone: Value of cloned record</description>
        <label>House Next Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Romans</fullName>
                </value>
                <value>
                    <fullName>Saxons</fullName>
                </value>
                <value>
                    <fullName>Vikings</fullName>
                </value>
                <value>
                    <fullName>Normans</fullName>
                </value>
                <value>
                    <fullName>Jaguars</fullName>
                </value>
                <value>
                    <fullName>Lions</fullName>
                </value>
                <value>
                    <fullName>Tigers</fullName>
                </value>
                <value>
                    <fullName>Panthers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_T_Yr_House_N_Yr__c</fullName>
        <description>Used in a report to check this as a student will rarely change house</description>
        <formula>AND(
    TEXT(House_Next_Year__c) != &quot;&quot;,
    TEXT(House_Next_Year__c) != TEXT(House__c)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House T.Yr != House N.Yr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House__c</fullName>
        <description>Defaults: 
On lead convert: Pending
On student clone: Value of cloned record</description>
        <label>House</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Romans</fullName>
                    <color>#3333FF</color>
                    <label>Romans</label>
                </value>
                <value>
                    <fullName>Saxons</fullName>
                    <color>#33FF33</color>
                    <label>Saxons</label>
                </value>
                <value>
                    <fullName>Vikings</fullName>
                    <color>#FFCC33</color>
                    <label>Vikings</label>
                </value>
                <value>
                    <fullName>Normans</fullName>
                    <color>#FF0000</color>
                    <label>Normans</label>
                </value>
                <value>
                    <fullName>Jaguars</fullName>
                    <color>#3333FF</color>
                    <label>Jaguars</label>
                </value>
                <value>
                    <fullName>Lions</fullName>
                    <color>#33FF33</color>
                    <label>Lions</label>
                </value>
                <value>
                    <fullName>Tigers</fullName>
                    <color>#FFCC33</color>
                    <label>Tigers</label>
                </value>
                <value>
                    <fullName>Panthers</fullName>
                    <color>#FF0000</color>
                    <label>Panthers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Notifications_Email__c</fullName>
        <label>IT Notifications Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Include_in_Reports_if_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is used to manually include a student in the report writing process (on manage assessments screen) if a student left more than 30 days before</description>
        <label>Include in Reports if Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_last_Invoicing_Termly__c</fullName>
        <description>Returns 1 if a tuition fee invoice for this student should have been generated on the most recent invoice generation date.</description>
        <formula>IF ( AND ( Starting_Date__c &lt;=  Last_Invoice_Date_Termly__c + 100 ,  Leaving_Date__c &gt; Last_Invoice_Generation_Date_Termly__c + 50), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Included in last Invoicing (Termly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicative_Equals_Actual__c</fullName>
        <description>Used in reports to make a comparison between the two. Is not 100% accurate because N students could also be wrongly assigned to PN or PN students to PN1 as the CONTAINS function would not be able to distinguish. Difficult to improve this because of the 5000 character limit.</description>
        <formula>CONTAINS(Indicative_Year_Group__c, TEXT(Year_Group__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicative Equals Actual</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>